GNOME Bugzilla – Bug 666618
0.10.35.2: glib-mkenums failed to parse comments
Last modified: 2012-01-02 00:24:30 UTC
Glib 2.28.2 is installed. gmake[4]: Entering directory `/work/a/ports/multimedia/gstreamer-plugins/work/gst-plugins-base-0.10.35.2/gst-libs/gst/rtsp' GEN gstrtsp-marshal.h GEN gstrtsp-enumtypes.h /usr/local/bin/glib-mkenums: gstrtspdefs.h:234: Failed to parse ` /*< protected >*/ ' /usr/local/bin/glib-mkenums: gstrtspdefs.h:348: Failed to parse ` /*< protected >*/ ' GEN gstrtsp-marshal.c GEN gstrtsp-enumtypes.c /usr/local/bin/glib-mkenums: gstrtspdefs.h:234: Failed to parse ` /*< protected >*/ ' /usr/local/bin/glib-mkenums: gstrtspdefs.h:348: Failed to parse ` /*< protected >*/ ' gmake all-am gmake[5]: Entering directory `/work/a/ports/multimedia/gstreamer-plugins/work/gst-plugins-base-0.10.35.2/gst-libs/gst/rtsp' gmake[4]: Entering directory `/work/a/ports/multimedia/gstreamer-plugins/work/gst-plugins-base-0.10.35.2/gst-libs/gst/audio' GEN audio-enumtypes.c /usr/local/bin/glib-mkenums: multichannel.h:80: Failed to parse ` /*< private >*/ ' GEN audio-enumtypes.h /usr/local/bin/glib-mkenums: multichannel.h:80: Failed to parse ` /*< private >*/ ' gmake all-am gmake[5]: Entering directory `/work/a/ports/multimedia/gstreamer-plugins/work/gst-plugins-base-0.10.35.2/gst-libs/gst/audio'
commit c3e6e23b854222e1d9ed0dd254511db9dc5e051d Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Tue Dec 20 21:48:29 2011 +0000 audio, rtsp: remove private/protected gtk-doc markup for enums This confuses glib-mkenums, and is not really useful anyway. https://bugzilla.gnome.org/show_bug.cgi?id=666618