audio, rtsp: remove private/protected gtk-doc markup for enums

This confuses glib-mkenums, and is not really useful anyway.

https://bugzilla.gnome.org/show_bug.cgi?id=666618